# fetcher

./: .env.example  .gitignore  AGENT.md  README.md  dev_log.md  project_architecture_and_plan.md  pyproject.toml
docker/: Dockerfile.sandbox  docker-compose.yml
docs/: design_rationale.md
scripts/: start.sh  status.sh  stop.sh
src/fetcher/: cli.py  config.py  state.py
src/fetcher/graphs/: code.py  rag.py  supervisor.py
src/fetcher/nodes/: code.py  integration.py  rag.py  supervisor.py
src/fetcher/utils/: docker_sandbox.py  embeddings.py  memory.py  qdrant_client.py
tests/: test_code.py  test_hardening.py  test_hitl.py  test_integration.py  test_rag.py  test_supervisor.py
